--- a/_posts/2024-12-26-Soneto-17.md
+++ b/_posts/2024-12-26-Soneto-17.md
@@ -1,39 +1,49 @@
 ---
 title: Soneto XVII (No te amo como si fueras rosa de sal, topacio)
-category: People
+category: Poems
 ---
 
-Dana Thomas Carvey (born June 2, 1955) is a performer and stand-up comedian known for their work as a cast member on Saturday Night Live and for playing the role of Garth Algar in the Wayne's World films.
+Pablo Neruda's *Soneto XVII* is an exquisite declaration of love that delves into the profound and unadorned depths of affection. The speaker professes a love that is not superficial or conventional—like bright jewels or fragrant roses—but rather quiet, enduring, and inseparable from the essence of life itself.
 
 <!-- more -->
 
-### Soneto XVII (No te amo como si fueras rosa de sal, topacio)
+### Soneto XVII (No te amo como si fueras rosa de sal, topacio) - Pablo Neruda
 
-No te amo como si fueras rosa de sal, topacio 
+_No te amo como si fueras rosa de sal, topacio_ 
+_o flecha de claveles que propagan el fuego:_ 
+_te amo como se aman ciertas cosas oscuras,_ 
+_secretamente, entre la sombra y el alma._ 
 
-o flecha de claveles que propagan el fuego:
+_Te amo como la planta que no florece y lleva_ 
+_dentro de sí, escondida, la luz de aquellas flores,_ 
+_y gracias a tu amor vive oscuro en mi cuerpo_ 
+_el apretado aroma que ascendió de la tierra._ 
 
-te amo como se aman ciertas cosas oscuras, 
+_Te amo sin saber cómo, ni cuándo, ni de dónde,_ 
+_te amo directamente sin problemas ni orgullo:_ 
+_así te amo porque no sé amar de otra manera,_
 
-secretamente, entre la sombra y el alma. 
+_sino así de este modo en que no soy ni eres,_
+_tan cerca que tu mano sobre mi pecho es mía,_ 
+_tan cerca que se cierran tus ojos con mi sueño._
 
-Te amo como la planta que no florece y lleva 
+### Sonnet XVII (I do not love you as if you were salt-rose, or topaz)
 
-dentro de sí, escondida, la luz de aquellas flores, 
+_I do not love you as if you were salt-rose, or topaz,_
+_or the arrow of carnations the fire shoots off._
+_I love you as certain dark things are to be loved,_
+_in secret, between the shadow and the soul._
 
-y gracias a tu amor vive oscuro en mi cuerpo 
+_I love you as the plant that never blooms_
+_but carries in itself the light of hidden flowers;_
+_thanks to your love a certain solid fragrance,_
+_risen from the earth, lives darkly in my body._
 
-el apretado aroma que ascendió de la tierra. 
+_I love you without knowing how, or when, or from where._
+_I love you straightforwardly, without complexities or pride;_
+_so I love you because I know no other way_
 
-Te amo sin saber cómo, ni cuándo, ni de dónde, 
-
-te amo directamente sin problemas ni orgullo: 
-
-así te amo porque no sé amar de otra manera, 
-
-sino así de este modo en que no soy ni eres,
-
-tan cerca que tu mano sobre mi pecho es mía, 
-
-tan cerca que se cierran tus ojos con mi sueño.
+_that this: where I does not exist, nor you,_
+_so close that your hand on my chest is my hand,_
+_so close that your eyes close as I fall asleep._
 
